fixed styling bug where bottom of average stat block on character sheet was cut off by footer

--- a/stat-tracker/src/index.css
+++ b/stat-tracker/src/index.css
@@ -47,6 +47,10 @@ h1 {
   font-size: 60px;
 }
 
+p {
+  font-size: 20px;
+}
+
 nav {
   display: flex;
   flex-direction: row;
@@ -62,6 +66,11 @@ nav {
   padding-top: 30px;
 }
 
+.padding-bottom {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
 .margin {
   margin: 20px;
 }
@@ -69,9 +78,10 @@ nav {
 .body-content {
   display: flex;
   flex-direction: column;
-  padding-bottom: 4.5rem;
+  padding-bottom: 5.5rem;
   justify-content: center;
   width: 100%;
+  min-height: fit-content;
 }
 
 .player-list {
